tests/specs/run/import_data_url_error_stack/import_data_url_error_stack.ts.out
error: Uncaught (in promise) Error: Hello 2
   throw new Error(`Hello ${A.C}`);
         ^
    at a (data:application/typescript;base64,ZW51bSBBIHsKICBBLAog......JHtBLkN9YCk7CiB9CiA=:8:10)
    at file:///[WILDCARD]/import_data_url_error_stack.ts:3:1
